--- a/run_once_after_10_fisher.sh.tmpl
+++ b/run_once_after_10_fisher.sh.tmpl
@@ -1,3 +1,5 @@
+#!{{ lookPath "fish" }}
+
 type fisher &>/dev/null || curl -sL https://git.io/fisher | source && fisher install jorgebucarana/fisher
 fisher install danhper/fish-ssh-agent
 fisher install decors/fish-colored-man
