Fixed run_once scripts

--- a/run_once_after_00_init.sh.tmpl
+++ b/run_once_after_00_init.sh.tmpl
@@ -2,6 +2,7 @@
 
 # Install micro plugins
 if command -v micro &>/dev/null
+then
 	#micro -plugin install comment
 	micro -plugin install fish
 	micro -plugin install fzf
