--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -2,8 +2,8 @@
 
 {{- $personal = promptBool "personal" -}}
 
-format: yaml
+format = toml
 
-data:
-  name: "Eric Renfro"
-  personal: {{ $personal | quote }}
+[data]
+  name = "Eric Renfro"
+  personal = {{ $personal | quote }}
