--- a/run_once_after_10_fisher.sh.tmpl
+++ b/run_once_after_10_fisher.sh.tmpl
@@ -5,4 +5,6 @@ fisher install danhper/fish-ssh-agent
 fisher install decors/fish-colored-man
 fisher install jorgebucaran/fisher
 fisher install patrickf3139/fzf.fish
-fisher install kidonng/zoxide.fish
+#fisher install kidonng/zoxide.fish
+fisher install jethrokuan/z
+fisher install IlanCosman/tide@v6
