--- a/dot_config/private_fish/config.fish.tmpl
+++ b/dot_config/private_fish/config.fish.tmpl
@@ -29,9 +29,9 @@ if type -q atuin
     atuin init fish | source
 end
 
-if type -q thefuck
-	thefuck --alias | source
-end
+#if type -q thefuck
+#	thefuck --alias | source
+#end
 
 #if type -q starship
 #    starship init fish | source
