--- a/dot_config/private_fish/config.fish.tmpl
+++ b/dot_config/private_fish/config.fish.tmpl
@@ -7,6 +7,10 @@ set -gx ANSIBLE_HOST_KEY_CHECKING False
 set -gx PY_COLORS true
 set -gx GPG_TTY (tty)
 
+{{- if stat (joinPath .chezmoi.homeDir ".config/sops/age/keys.txt") }}
+set -gx SOPS_AGE_KEY_FILE {{ .chezmoi.homDir }}//config/sops/age/keys.txt
+{{- end }}
+
 fish_add_path "{{ .chezmoi.homeDir }}/bin"
 fish_add_path "{{ .chezmoi.homeDir }}/.local/bin"
 fish_add_path "{{ .chezmoi.homeDir }}/.cargo/bin"
