Changed chezmoi config to yaml

--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -2,8 +2,8 @@
 
 {{- $personal = promptBool "personal" -}}
 
-format = toml
+format = yaml
 
-[data]
-  name = "Eric Renfro"
-  personal = {{ $personal | quote }}
+data:
+  name: "Eric Renfro"
+  personal: {{ $personal | quote }}
