Remove fish-ssh-agent from fish plugins

--- a/run_once_after_10_fisher.sh.tmpl
+++ b/run_once_after_10_fisher.sh.tmpl
@@ -1,7 +1,7 @@
 #!{{ lookPath "fish" }}
 
 type fisher &>/dev/null || curl -sL https://git.io/fisher | source && fisher install jorgebucarana/fisher
-fisher install danhper/fish-ssh-agent
+#fisher install danhper/fish-ssh-agent
 fisher install decors/fish-colored-man
 fisher install jorgebucaran/fisher
 fisher install patrickf3139/fzf.fish
